# martelo_orcamentos_v3

./: .env.example  .gitignore  AGENTS.md  Martelo_Orcamentos_V3.spec  README.md  _phc_discover.py  _phc_sample.py  alembic.ini  build_beta.py  pyproject.toml  requirements.txt  run_app.py  version.py
.claude/: settings.json
alembic/: env.py  script.py.mako
app/: __init__.py  main.py
deploy/: .env.beta.exemplo
docs/: 01_fase_1_modelo_base_orcamentos.md  02_fase_6_modelo_pecas.md  03_fase_6_modelo_orlas.md  04_fase_6_modelo_ferragens_operacoes.md  05_fase_6_modelo_valuesets_materiais.md  06_fase_6_analise_excel_materias_primas.md  07_fase_6_mapeamento_materias_primas.md  08_fase_6_modelo_modulos_configuraveis.md  09_fase_6_modelo_operacoes_producao.md  10_fase_7_modelo_acabamentos_pecas.md  11_fase_7_modelo_linhas_custeio.md  12_fase_7_redesenho_custeio_item.md  13_fase_7_modelo_valuesets_orcamento_item.md  14_fase_7_ligacao_pecas_valuesets.md  15_fase_7_def_pecas_valuesets_arquitetura.md  16_fase_8_custeio_item_arquitetura.md  17_plano_e_ponto_situacao_martelo_v3.md  18_inventario_unioes_estruturais.md  19_roteiro_experiencia_visual_e_legado_v2.md  20_checklist_ux8_versao_candidata.md  21_plano_evolucao_compativel_ia_imos.md  22_fase_1_snapshots_orlas_m2.md  23_fase_2_opcao_unica.md  24_fase_3_custeio_simplificado.md  25_fase_4_perfis_margens.md  26_fase_5_encomendas_phc.md  27_fase_6_categorias_biblioteca_modulos.md  28_fase_7_integracao_regressao.md  29_custeio_pecas_compostas_colapsaveis_mockup.md  Ensinar_assistente_Martelo.docx  README.md  (+6 more)
scripts/: README.md  (+34 more)
(+783 files in other folders)
