[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "martelo-orcamentos-v3"
version = "0.1.0"
description = "Fundação técnica do Martelo Orçamentos V3."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "PyMySQL>=1.1",
    "pytest>=8.0",
    "python-dotenv>=1.0",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=3.1.0,<4.1",
    "matplotlib>=3.8",
    "reportlab>=4.0",
    "openpyxl>=3.1",
    "pywinauto",
    "pywin32",
    "sentence-transformers",
    "pypdf",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.package-data]
"app.ui" = ["assets/icons/*.svg"]
